k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-api
  labels:
    app: users-api
spec:
  type: LoadBalancer
  selector:
    app: users-api
  ports:
    - name: http
      protocol: TCP
      port: 5055
      targetPort: 5055
